--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Intern_Anrdoid_2020</string>
     <string name="login_view">ログイン画面</string>
     <string name="search_view">検索画面</string>
+    <string name="search_view_q1">検索画面Q1</string>
     <string name="article_view">記事一覧</string>
     <string name="login_button">ログイン</string>
     <string name="search">検索</string>
