--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="login_button">ログイン</string>
     <string name="search">検索</string>
     <string name="search_comment">キーワードを入力してください</string>
-
+    <string name="zero_length_error">キーワードが0文字です</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="qitta_lgtm">LGTM:</string>
     <string name="qiita_title">title</string>
